# mac-dualsense

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  cc_controller.spec  com.sour4bh.cc-controller.plist  pyproject.toml  setup_app.py
cc_controller/: __init__.py  app_focus.py  config.py  controller.py  daemon.py  detector.py  haptics.py  keyboard.py  mapper.py
cc_controller/controllers/: __init__.py  base.py  dualsense.py  pro_controller.py
cc_controller/haptics/: __init__.py  base.py  dualsense.py  pro_controller.py
cc_controller/ui/: __init__.py  __main__.py  main.py
config/: mappings.yaml
native/: Package.resolved  Package.swift  README.md
native/AppBundle/: Info.plist
native/Sources/CCControllerNative/: AppState.swift  ButtonBindingEditor.swift  CCControllerNativeApp.swift  ConfigStore.swift  ControllerManager.swift  ControllerTypes.swift  ControllerVisualView.swift  DualSenseButtons.swift  KeySender.swift  Logger.swift  Models.swift  PreferencesView.swift  SVGButtonExtractor.swift  SVGPathParser.swift
native/Sources/MacDualSense/: AppFocus.swift  AppKitDialogs.swift  AppState.swift  ButtonBindingEditor.swift  ConfigStore.swift  ControllerHaptics.swift  ControllerManager.swift  ControllerTypes.swift  ControllerVisualView.swift  DualSenseBackButtons.swift  DualSenseVisuals.swift  KeySender.swift  Logger.swift  MacDualSenseApp.swift  MenuView.swift  Models.swift  MouseSender.swift  PreferencesView.swift  SVGPathParser.swift  WorkspaceSelection.swift  WorkspaceView.swift
native/scripts/: build_app.sh  install_app.sh
(+2 files in other folders)
